namespace Todo.Core.Entities;

public enum Priority
{
    VeryLow,
    Low,
    Medium,
    High,
    VeryHigh
}