using System.ComponentModel.DataAnnotations;

namespace Todo.Core.Entities;

public class Role
{
    [Key]
    public int Id { get; set; }

    [Required]
    [StringLength(50)]
    public string Name { get; set; } = string.Empty;

    public HashSet<PermissionType> Permissions { get; set; } =
        new HashSet<PermissionType>();
}